Resize code cell - Show error

--- a/src/Components/code-editor.css
+++ b/src/Components/code-editor.css
@@ -1,9 +1,10 @@
 .editor-wrapper {
     postion: relative;
     height: 100%;
+    width: 100%;
+    width: calc(100% - 10px);
 
 }
-
 
 .editor-wrapper .button-format{
     position: absolute;
