--- a/src/Components/code-editor.css
+++ b/src/Components/code-editor.css
@@ -8,9 +8,8 @@
 
 .editor-wrapper .button-format{
     position: absolute;
-    top: 5px;
-    right: 5px;
-    z-index: 20;
+    z-index: 1;
+    align: right;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
 }
