--- a/src/Components/code-editor.css
+++ b/src/Components/code-editor.css
@@ -1,19 +1,18 @@
 .editor-wrapper {
-    postion: relative;
+    position: relative;
     height: 100%;
-    width: 100%;
     width: calc(100% - 10px);
-
-}
-
-.editor-wrapper .button-format{
+  }
+  
+  .editor-wrapper .button-format {
     position: absolute;
-    z-index: 1;
-    align: right;
+    top: 5px;
+    right: 5px;
+    z-index: 20;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.editor-wrapper:hover .button-format{
+    transition: opacity 0.3s;
+  }
+  
+  .editor-wrapper:hover .button-format {
     opacity: 1;
-}
+  }
